# click-option-group

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.distro/: python-click-option-group.spec
.distro/tests/: rpmlint.fmf  smoke.fmf
.github/workflows/: ci.yaml  main.yaml  release.yaml  step_build-wheel.yaml  step_test.yaml
click_option_group/: __init__.py  _core.py  _decorators.py  _helpers.py  _optiongroup.py
docs/: api.rst  conf.py  index.rst  manual.rst  tutorial.rst
src/click_option_group/: __init__.py  _core.py  _decorators.py  _helpers.py
tests/: conftest.py  test_click_option_group.py  test_optgroup.py
